tests/mapped_types/mapped_types.exp
Error -------------------------------------------------------------------------------------------- not_supported.js:2:11

Mapped Types are not yet supported. [unsupported-syntax]

   2| type X = {[key in keyof O]: number}; // ERROR mapped types not yet supported
                ^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error
